--- a/nishanthprofilio.html
+++ b/nishanthprofilio.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="image/Nishanth-profile.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="Nishanth-profile.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Nishanth S</h1>
             <p>I AM A UG STUDENT</p>
         </div>
@@ -165,7 +165,7 @@ Designed a responsive website interface for an online bike booking platform usin
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="C:\Users\nisha\OneDrive\Pictures\Documents\Nishanth(Resume).pdf " target="_blank" class="download-button">Download CV</a>
+            <a href="Nishanth(Resume).pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
@@ -194,4 +194,5 @@ Designed a responsive website interface for an online bike booking platform usin
         });
     </script>
 </body>
+
 </html>
